--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "build": "grunt",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ashley Colman",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "electron": "^1.4.0",
     "electron-packager": "^8.0.0",
-    "webpack": "^1.13.2",
-    "webpack-node-externals": "^1.4.3"
+    "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0"
   },
   "dependencies": {
     "nedb": "^1.8.0",
